[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "pdm-pep517"]

[project]
authors = [
  {name = 'Daniele Arosio', email = 'darosio@duck.com'}
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Development Status :: 4 - Beta"
]
dependencies = []
description = "Documentation for lab protocols using MkDocs"
keywords = ["Molecular Biology", "Biophysics"]
license = "BSD-3-Clause"
name = "mkprotocols"
readme = "docs/README.md"
requires-python = ">=3.12"
version = "0.2.2"

[project.optional-dependencies]
dev = [
  "commitizen <= 4.1.0",
  "pre-commit <= 4.0.1"
]
docs = [
  "pymdown-extensions>=10.11.2",
  "mkdocs-page-pdf>=0.1.1",
  "mkdocs-material>=9.5.40",
  "mkdocs>=1.6.1"
]

[tool.commitizen]
changelog_file = "docs/CHANGELOG.md"
name = "cz_conventional_commits"
# name = "cz_customize"
tag_format = "v$version"
version = "0.2.2"
version_files = [
  "pyproject.toml:version",
  "docs/README.md:.version-",
  "mkdocs.yml:.Version:"
]

[tool.hatch.build.targets.wheel]
packages = ["docs"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
bump = "cz bump --major-version-zero -ch {args}"
ch = "cz ch --incremental --unreleased-version HEAD"
init = [
  "pre-commit --version",
  "pre-commit install",
  "pre-commit install --hook-type commit-msg --hook-type pre-push"
]
lint = [
  "pre-commit --version",
  "pre-commit run --all-files --show-diff-on-failure {args}"  # No need for --hook-stage=manual
]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean"  # --strict
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.pdm]
hatch_compat = true

[tool.typos]

[tool.typos.default.extend-words]
arange = "arange"
arosio = "Arosio"
